--- a/css/02_show.css
+++ b/css/02_show.css
@@ -8,21 +8,33 @@ html, body {
 main .subject h1{
     color: #ededed;
 }
-main .s_01 {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    z-index: 2;
+
+main .c_04 .contact div a:hover{
+    color: #ededed;
 }
+/* ====================================================== */
 
 main h2 {
     margin-bottom: 8.5rem;
 }
 
-main a h2:after {
+main h2 a:after {
     content: '→';
     display: inline-block;
     margin-left: 3rem;
+}
+main h2 a:hover{
+    color: #ededed;
+}
+
+/*==================================================*/
+
+
+main .s_01 {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    z-index: 2;
 }
 
 main .s_01 ul {
@@ -117,6 +129,7 @@ main .s_01 ul li a span {
 
 main .s_01 ul li a h3 {
     padding-bottom: 7rem;
+    padding-left: 10rem;
     font-size: 15rem;
     white-space: nowrap;
     transition: .5s;
