--- a/css/03_venue.css
+++ b/css/03_venue.css
@@ -116,26 +116,28 @@ main .v_01 .process {
     padding: 2.5rem 0;
     border-bottom: 1px solid #303030;
     height: 100vh;
+
 }
 
 main .v_01 .process div {
-    width: 60%;
+    width: 55%;
     border-right: 1px solid #303030;
 }
 
-main .v_01 .process div img {
-
+main .v_01 .process div video {
+    padding: 4rem;
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
 
-main .v_01 .process div video {}
-
 main .v_01 .process article {
-    width: 40%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding-left: 6rem;
+    padding-left: 10rem;
 }
 
 main .v_01 .process article span {
@@ -179,16 +181,24 @@ main .v_02 {
 }
 
 main .v_02 div:first-child {
-    width: 60%;
+    width: 55%;
     height: 100%;
     background: #e6e2dd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 main .v_02 div:first-child img {
+    /* display: block;
+    margin: 0 auto; */
+
+
 }
 
 main .v_02 div:last-child {
-    width: 40%;
+    width: 45%;
     padding-left: 6rem;
     display: flex;
     flex-direction: column;
