--- a/css/02_show.css
+++ b/css/02_show.css
@@ -124,13 +124,13 @@ main .s_01 ul li a span {
     color: #ededed;
     display: block;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 main .s_01 ul li a h3 {
-    padding-bottom: 7rem;
-    padding-left: 10rem;
-    font-size: 15rem;
+    padding-bottom: 6rem;
+    margin-left: 10rem;
+    font-size: 10rem;
     white-space: nowrap;
     transition: .5s;
 
