--- a/css/common_sub.css
+++ b/css/common_sub.css
@@ -1,56 +1,35 @@
-html,
-body {
-    margin: 0;
-}
+html,body {margin: 0;}
+html {font-size: 62.5%;}
 
-ul,
-li {
+ul,li {    
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+h1,h2,h3,h4,h5,h6,p {
     margin: 0;
     padding: 0;
 }
 
-* {
-    box-sizing: border-box;
-}
+* {box-sizing: border-box;}
 
 a {
     text-decoration: none;
-    color: #303030;
-}
+    color: #303030;}
 
-table {
-    border-collapse: collapse;
-}
-
-
-/*==================================*/
-
-html {
-    font-size: 10px;
-}
-
+table {border-collapse: collapse;}
 
 /*==========================================================================*/
 
 .header {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     position: relative;
 }
 
 header .logo {
+    width: 100%;
     height: 16rem;
     display: flex;
     justify-content: space-between;
@@ -59,85 +38,64 @@ header .logo {
 
 header .logo p {
     position: relative;
-    font-size: 1.5rem;
-    padding: 0 1rem;
+    width:calc((100%-60rem)/2);
+    font-size: 1rem;
+    padding: 1.5rem 0;
+    padding-left: 0.5rem;
     color: #303030;
-}
-
-header .logo p:before {
-    position: absolute;
-    left: 0;
-    top: -70%;
-    content: '';
-    display: block;
-    width: calc((80vw - 35rem)/2);
+    border-bottom: 1px solid #303030;
     border-top: 1px solid #303030;
 }
 
-header .logo p:after {
-    position: absolute;
-    left: 0;
-    bottom: -70%;
-    content: '';
-    display: block;
-    width: calc((80vw - 35rem)/2);
-    border-bottom: 1px solid #303030;
-}
 
-header .logo a {
-    transform: translateX(75%);
+header .logo > a {
+    width: 20vw;
+    margin: 0 2rem;
 }
 
 header .logo a img {
     width: 100%;
 }
 
-header nav {
+header .h_rt{
     position: relative;
-    font-size: 1.5rem;
-    padding: 0 1rem;
-}
-
-header nav:before {
-    position: absolute;
-    right: 0;
-    top: -70%;
-    content: '';
-    display: block;
-    width: calc((80vw - 35rem)/2);
-    border-top: 1px solid #303030;
-
-}
-
-header nav:after {
-    position: absolute;
-    right: 0;
-    bottom: -70%;
-    content: '';
-    display: block;
-    width: calc((80vw - 35rem)/2);
+    width:calc((100%-60rem)/2);
+    padding: 1.5rem 0.5rem 1.5rem 0;
     border-bottom: 1px solid #303030;
+    border-top: 1px solid #303030;
+    text-align: right;
+}
+
+header nav{
+    text-align: right;
 }
 
 header nav a {
     position: relative;
-    margin-right: 3.5rem;
-    padding: 1rem 1rem;
+    display: inline;
+    padding: 1rem 0.08vw;
+    font-size: 1rem;
 }
 
 header nav a:last-child {
     margin-right: 0;
 }
 
-header nav a:hover:after {
+
+header nav a:after {
     position: absolute;
-    left: 0;
+    left: 50%;
     top: 50%;
     content: '';
     display: block;
-    width: 100%;
+    width: 0;
     border-top: 1px solid #303030;
     transition: .3s;
+}
+
+header nav a:hover:after {
+    left: 0;
+    width: 100%;
 }
 
 header nav a.active:after {
@@ -150,6 +108,36 @@ header nav a.active:after {
     border-top: 1px solid #303030;
     transition: .3s;
 }
+/* === menu-trigger === */
+
+header .menu-trigger{
+    display: none;
+    position: relative;
+    width: 30px; height: 30px;
+    background: #303030;
+}
+header .menu-trigger span{
+    position: absolute;
+    width: 75%; height: 3px;
+    background: #e6e3de;
+}
+header .menu-trigger span:first-of-type{
+    top: 30%; left: 12%;
+}
+
+header .menu-trigger span:last-of-type{
+    bottom: 30%; left: 12%;
+}
+
+header .menu-trigger.active span:first-of-type{
+    top: 45%; left: 12%;
+    transform:rotate(45deg);
+}
+header .menu-trigger.active span:last-of-type{
+    bottom: 45%; left: 12%;
+    transform:rotate(-45deg);
+}
+
 
 /*===================================================*/
 
@@ -159,11 +147,10 @@ main .subject {
 }
 
 main .subject h1 {
-    font-size: 20rem;
+    font-size: 11vw;
     text-align: center;
     margin: -10px 0 0 0;
     color: #303030;
-
 }
 
 h2{
@@ -235,26 +222,82 @@ main .c_03 div article .arrow:hover {
 
 /*=========================================*/
 
-main .c_04 {
+main .c_03 {
     width: 80%;
+    margin: 0 auto;
+}
+
+main .c_03 h3 {
+    padding: 7rem 0 9rem 0;
+    text-align: center;
+    font-size: 2rem;
+}
+
+main .c_03 div {
+    display: flex;
+    padding-bottom: 1.5rem;
+}
+
+main .c_03 div article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3rem;
+    width: 50%;
+}
+
+main .c_03 div article:first-child {
+    border-right: 1px solid #303030;
+}
+
+main .c_03 div article h2 {
+    padding-top: 0;
+    text-align: center;
+    font-size: 3.5rem;
+}
+
+main .c_03 div article img {
+    display: block;
+    margin: 0 auto;
+    width: 30rem;
+    height: 30rem;
+}
+
+main .c_03 div article .arrow {
+    display: inline-block;
+    margin-top: 7.5rem;
+    color: #e6e3de;
+    font-size: 2rem;
+    padding: 1rem 3rem;
+    background: #303030;
+    transition: .5s;
+}
+
+main .c_03 div article .arrow:hover {
+    color: #303030;
+    background: #f8bebe;
+
+}
+
+/*=========================================*/
+
+main .c_04 {
+    width: 80vw;
     margin: 0 auto;
     display: flex;
     border-top: 1px solid #303030;
 }
 
 main .c_04 > div {
-    width: 30%;
-    padding: 7rem 0 0 3rem;
+    width: 30vw;
+    padding: 7rem 3rem;
     margin-right: 5rem;
     border-right: 1px solid #303030;
 }
 
-main .c_04 > div a {}
-
-main .c_04 > div a img {}
-
 main .c_04 .contact {
-    width: 70%;
+    width: 70vw;
     margin: 7rem 0 11rem 5.5rem;
 }
 
@@ -272,7 +315,6 @@ main .c_04 .contact div:first-child {
 main .c_04 .contact div h4 {
     margin-bottom: 4rem;
     font-size: 1.8rem;
-    color: #303030;
 
 }
 
@@ -280,16 +322,16 @@ main .c_04 .contact div p {
     white-space: pre-line;
     line-height: 4rem;
     font-size: 2rem;
-    color: #303030;
 
 }
 
 main .c_04 .contact div a {
-    display: block;
+    display: inline-block;
     line-height: 4rem;
     font-size: 2rem;
     transition: .2s;
 }
+
 main .c_04 .contact div a:hover{
     color: #f8bebe;
 }
@@ -316,3 +358,118 @@ footer p {
     white-space: pre-wrap;
 
 }
+    
+
+    
+    
+    
+
+/*============================================*/
+
+@media (max-width:1024px){
+    body{
+        position: relative;
+
+}
+    header{
+        width: 95%;
+    }
+    header .h_rt{
+    padding: 0.5rem 0.5rem 0.5rem 0;
+    }
+    header .h_rt .menu-trigger{
+        display: inline-block;
+        z-index: 5;
+    }
+  
+    header .h_rt nav {
+        position: fixed;
+        z-index: 4;
+
+        right: 0; top: -100vh;
+        width: 100vw; height: 100vh;
+        background: #303030;
+        text-align: center;
+        padding: 5rem 0;
+        transition: .5s;
+    }
+    
+    header .h_rt nav.active{
+        right: 0; top: 0;
+    }
+    
+    nav a:hover:after, nav a.active:after {display: none;}
+    
+    header .h_rt nav a {
+        display: block;
+        color: #e6e2de;
+        padding: 4rem 0;
+        font-size: 5rem;
+    }
+    
+    header .h_rt nav a.active{
+        background: rgba(248,190,190,0.9);
+    }
+    
+    header nav a.active:after {
+        border:none;
+    }
+
+    main .subject {
+        width: 95%;
+    }
+    
+    main .c_03 {
+        width: 100%;
+    }
+
+    main .c_03 div {
+        width: 100%;
+        display: block;
+        text-align: center;
+        padding-bottom: 1.5rem;
+    }
+
+    main .c_03 div article {
+        width: 100%;
+        display: block;
+        text-align: center;
+        padding-bottom: 5rem;
+    }
+
+    main .c_03 div article:first-of-type {
+        border-right: none;
+        border-bottom: 1px solid #303030;
+        margin-bottom: 5rem;
+    }
+
+    main .c_04 {
+        width: 100%;
+        border-top: 1px solid #303030;
+    }
+
+    main .c_04 > div {
+       display: none;
+    }
+    
+    main .c_04 .contact {
+        width: 100%;
+    }
+    
+    
+}/*769*/
+
+
+/*============================================*/
+
+
+@media (max-width:768px){
+    
+}
+
+
+
+
+
+
+
