--- a/css/01_about.css
+++ b/css/01_about.css
@@ -32,13 +32,26 @@ main .a_00 {
     margin: 0 auto;
 }
 
-main .a_00 h2 {}
+main .a_00 h2 {
+    opacity: 0;
+    transition:1.5s;
+}
 
-main .a_00 h2::after {
-    content: '↓';
-    display: block;
+main .a_00 .arrow {
+    text-align: center;
     font-size: 2.5rem;
     margin: 4rem 0;
+    opacity: 0;
+    transition: 1s;
+    animation: arrow 1.5s linear infinite;
+}
+
+@keyframes arrow{
+    0%{transform:translateY(0);}
+    25%{transform:translateY(-25%);}
+    50%{transform:translateY(0%);}
+    75%{transform:translateY(25%);}
+    100%{transform:translateY(0);}
 }
 
 main .a_00 img {
@@ -143,6 +156,7 @@ main .a_02 .history article img {
 
 main .a_02 .history article p {
     white-space: pre-line;
+    word-break: keep-all;
     font-size: 2rem;
     line-height: 1.8;
     text-align: center;
@@ -159,66 +173,67 @@ main .a_03 h2 {
     margin-bottom: 9.5rem;
 }
 
-main .a_03 ul {
+main .a_03 .img_btn {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
 
-main .a_03 ul li {
+main .a_03 .img_btn li {
     overflow: hidden;
     margin: 0 auto;
     padding: 1px;
     width: 25%;
-    height: 27rem;
     position: relative;
 }
-
-main .a_03 ul li:hover {
+main .a_03 .img_btn li:hover {
     filter: grayscale(100%);
 }
-
-main .a_03 ul li.active {
+main .a_03 .img_btn li.active {
     filter: grayscale(100%);
 }
-
-main .a_03 ul li.active:after {
+main .a_03 .img_btn li.active:after {
     content: '';
     display: inline-block;
     position: absolute;
-    left: calc(50% - 10px);
+    left: calc(50%);
+    transform: translateX(-50%);
+    
     bottom: 0;
-
     width: 0;
     height: 0;
-    border-top: 20px solid none;
-    border-bottom: 20px solid #e6e2de;
-    border-right: 20px solid transparent;
-    border-left: 20px solid transparent;
+    border-top: 1.5rem solid none;
+    border-bottom: 1.5rem solid #e6e2de;
+    border-right: 1.5rem solid transparent;
+    border-left: 1.5rem solid transparent;
 }
 
-main .a_03 ul li img {
+main .a_03 .img_btn li img {
     width: 100%;
-/*    height: 100%;*/
+    height: 100%;
 }
 
-main .a_03 > div {
+main .a_03 .img_slide {
     width: 100%;
-    height: 60vh;
+    height: 55vh;
     overflow: hidden;
+    position: relative;
+
 }
 
-main .a_03 div > div {
+main .a_03 .img_slide div {
     width: 100%;
     display: none;
 }
-
-main .a_03 div.active {
+main .a_03 .img_slide div.active {
     display: block;
 }
 
-main .a_03 div > div img {
+main .a_03 .img_slide div img {
+    position: absolute;
+    top: 0; left: 0;
     width: 100%;
+    height: 100%;
 }
 
 
@@ -250,6 +265,10 @@ main .a_03 div > div img {
     main .a_02 .history article p {
         white-space: normal;
         word-break: keep-all;
+    }
+    main .a_03 {
+        width: 95%;
+        margin: 0 auto;
     }
 
 
