--- a/css/02_show.css
+++ b/css/02_show.css
@@ -45,13 +45,29 @@ main .s_01 ul li {
     border-top: 1px solid #303030;
     overflow: hidden;
     position: relative;
-
 }
 
 main .s_01 ul li:last-of-type{
     border-bottom: 1px solid #303030;
 }
 
+main .s_01 ul li div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    z-index: -1;
+    opacity: 0;
+    background-size: cover;
+    transition: .8s;
+}
+main .s_01 ul li div img{
+    width: 100%;
+}
+
+
+/*
 main .s_01 ul li:nth-of-type(1) a:before {
     content: "";
     width: 100%;
@@ -107,19 +123,22 @@ main .s_01 ul li:nth-of-type(4) a:before {
     background-size: cover;
     transition: .5s;
 }
+*/
 
-main .s_01 ul li:nth-of-type(1):hover a:before,
-main .s_01 ul li:nth-of-type(2):hover a:before,
-main .s_01 ul li:nth-of-type(3):hover a:before, main .s_01 ul li:nth-of-type(4):hover a:before {
-    top: 0;
+main .s_01 ul li:nth-of-type(1):hover div,
+main .s_01 ul li:nth-of-type(2):hover div,
+main .s_01 ul li:nth-of-type(3):hover div, 
+main .s_01 ul li:nth-of-type(4):hover div{
+
     opacity: 1;
+    top: -180%;
 }
 
 main .s_01 ul li a {
     overflow: hidden;
 }
 
-main .s_01 ul li a span {
+main .s_01 ul li a > span {
     font-size: 2rem;
     color: #ededed;
     display: block;
@@ -129,7 +148,7 @@ main .s_01 ul li a span {
 
 main .s_01 ul li a h3 {
     padding-bottom: 6rem;
-    margin-left: 10rem;
+/*    margin-left: 10rem;*/
     font-size: 10rem;
     white-space: nowrap;
     transition: .5s;
@@ -137,5 +156,4 @@ main .s_01 ul li a h3 {
 }
 main .s_01 ul li:hover a h3{
     color: #ededed;
-
 }
