--- a/css/02_show_01.css
+++ b/css/02_show_01.css
@@ -27,7 +27,7 @@ main .s_01 ul li {
 
 }
 
-main .s_01 ul li:last-of-type {
+main .s_01 ul li:last-of-type{
     border-bottom: 1px solid #303030;
 }
 
@@ -89,8 +89,7 @@ main .s_01 ul li:nth-of-type(4) a:before {
 
 main .s_01 ul li:nth-of-type(1):hover a:before,
 main .s_01 ul li:nth-of-type(2):hover a:before,
-main .s_01 ul li:nth-of-type(3):hover a:before,
-main .s_01 ul li:nth-of-type(4):hover a:before {
+main .s_01 ul li:nth-of-type(3):hover a:before, main .s_01 ul li:nth-of-type(4):hover a:before {
     top: 0;
     opacity: 1;
 }
@@ -104,19 +103,18 @@ main .s_01 ul li a span {
     color: #ededed;
     display: block;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 main .s_01 ul li a h3 {
-    padding-bottom: 7rem;
-    padding-left: 10rem;
-    font-size: 15rem;
+    padding-bottom: 6rem;
+    margin-left: 10rem;
+    font-size: 10rem;
     white-space: nowrap;
     transition: .5s;
 
 }
-
-main .s_01 ul li:hover a h3 {
+main .s_01 ul li:hover a h3{
     color: #ededed;
 
 }
@@ -167,7 +165,7 @@ main .s_li_01 {
 main .s_li_01 table {
     width: 30%;
     text-align: left;
-    margin: 15rem 0 15rem 6rem;
+    margin: 15rem 0;
 }
 
 main .s_li_01 table tr {
@@ -185,9 +183,10 @@ main .s_li_01 table tr td {
 main .s_li_01 div {
     width: 70%;
     white-space: pre-line;
-    font-size: 5rem;
+    word-break: keep-all;
+    font-size: 4.5rem;
     font-weight:bold;
-    padding: 15rem 0 15rem 20rem;
+    padding: 15rem 0 15rem 10vw;
     border-left: 1px solid #303030;
 
 }
@@ -223,7 +222,7 @@ main .s_li_03 p {
     width: 70%;
     white-space: pre-line;
     font-size: 1.5rem;
-    padding: 15rem 0 15rem 20rem;
+    padding: 15rem 0 15rem 10vw;
 
 
 }
@@ -280,6 +279,11 @@ main .s_li_04 div a:hover{
 
 main .s_li_04 div a:hover:after{
     border: 1rem solid #f8bebe;
+}
+
+@media (max-width:1023px){
+
+
 }
 
 
