--- a/css/03_venue.css
+++ b/css/03_venue.css
@@ -21,6 +21,8 @@ header nav a.active:after, header nav a:hover:after {
     border-top: 1px solid #f8bebe;
 }
 
+
+
 /* ==================================================== */
 main .subject {
     width: 60%;
@@ -44,30 +46,49 @@ main .subject div h1 {
     border: 1px solid #e6e2dd;
     border-top: none;
 }
+main .subject div h1 span{
+    display: inline-block;
+    transform: translateY(100%);
+}
 
-main>span {
+main .scroll {
     color: #e6e2dd;
     display: block;
     font-size: 2rem;
     text-align: center;
     margin-top: 7.5rem;
     letter-spacing: 0.5rem;
+    opacity: 0;
 }
 
-main>span::after {
-    content: '↓';
+main .scroll .arrow {
     display: block;
     font-size: 2.5rem;
     margin-top: 3rem;
+    animation: arrow 1.5s linear infinite;
+}
+
+@keyframes arrow{
+    0%{transform:translateY(0);}
+    25%{transform:translateY(-25%);}
+    50%{transform:translateY(0%);}
+    75%{transform:translateY(25%);}
+    100%{transform:translateY(0);}
 }
 
 /* ======================================================== */
 main aside {
     width: 15%;
     position: fixed;
-    right: 0;
+    right: -20%;
     top: 50%;
+    transition:.5s;
 }
+main aside.active{
+    right: 0;
+
+}
+
 
 main aside h5 {
     color: #e6e2dd;
@@ -75,6 +96,7 @@ main aside h5 {
     padding-bottom: 2rem;
     text-align: center;
     border-bottom: 1px solid #e6e2dd;
+    cursor: pointer;
 }
 
 main aside .intro {
@@ -84,6 +106,8 @@ main aside .intro {
 main aside .intro li {
     display: flex;
     margin-top: 3rem;
+    cursor: pointer;
+
 }
 
 main aside .intro li.active span{
@@ -94,6 +118,7 @@ main aside .intro li span {
     font-size: 1.5rem;
     color: #e6e2dd;
     white-space: pre-line;
+    transition: .3s;
 }
 main aside .intro li span:first-child{
     display: inline-block;
@@ -133,7 +158,7 @@ main .v_01 .process article {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding-left: 10rem;
+    padding: 0 1vw 0 6vw;
 }
 
 main .v_01 .process article span {
@@ -141,7 +166,7 @@ main .v_01 .process article span {
 }
 
 main .v_01 .process article h3 {
-    font-size: 5.5rem;
+    font-size: 3vw;
     margin: 3.5rem 0 7.5rem 0;
 }
 
@@ -149,11 +174,12 @@ main .v_01 .process article p {
     font-size: 2rem;
     line-height: 1.8;
     white-space: pre-line;
+    word-break: keep-all;
 }
 
 main .v_01 .process article h4 {
     margin: 10rem 0 4rem 0;
-    font-size: 3.5rem;
+    font-size: 2vw;
 }
 
 main .v_01 .process article h4:after {
@@ -230,10 +256,9 @@ main .v_02 div:last-child a:hover{
 
 /* ================================================= */
 
-main > div {
+main .process, main >div:last-of-type {
     background: #e6e2dd;
 }
-
 
 /*=====================================*/
 @media (max-width:1024px){
@@ -287,7 +312,6 @@ main > div {
     main .v_01 .process {
         display: block;
         height: 100%;;
-
     }
 
     main .v_01 .process div {
@@ -298,6 +322,12 @@ main > div {
     main .v_01 .process article {
         width: 100%;
         margin-bottom: 2rem;
+    }
+    main .v_01 .process article h3{
+        font-size: 4.5rem;
+    }
+    main .v_01 .process article h4{
+        font-size: 3rem;
     }
 
     main .v_01 .process article p {
