--- a/css/05_contact.css
+++ b/css/05_contact.css
@@ -6,6 +6,11 @@ html, body{
 main .subject {
     padding-bottom: 5rem;
 }
+main .subject h1 span {
+    display: inline-block;
+    transform: translateY(100%);
+}
+
 
 /*=======================================================*/
 
@@ -32,12 +37,11 @@ main .subject {
     
 }
 
-.t_01 div textarea{
+.t_01 div:last-of-type input{
         width: 100%; height: 250px;
         background: #babcbb;
         margin-bottom: 30px;
         padding: 10px;
-
 }
 
 .t_01 p{
