--- a/css/00_index.css
+++ b/css/00_index.css
@@ -61,7 +61,47 @@ header .title {
     text-align: center;
     font-size: 7vw;
     margin-top: -50px;
+    overflow: hidden;
+
 }
+
+header .title h1 span{
+    display: inline-block;
+    transition:.7s;
+    opacity: 0;
+    
+}
+header .title h1 span:nth-of-type(1){
+    transform: translateX(-60%);
+}
+header .title h1 span:nth-of-type(2){
+    transform: translateY(-40%);
+}
+header .title h1 span:nth-of-type(3){
+    transform: translateY(40%);
+
+}
+header .title h1 span:nth-of-type(4){
+    transform: translateY(-40%);
+}
+header .title h1 span:nth-of-type(5){
+    transform: translateX(-40%);
+}
+header .title h1 span:nth-of-type(6){
+    transform: rotate(50deg);
+}
+header .title h1 span:nth-of-type(7){
+    transform: translateY(-40%);
+}
+header .title h1 span:nth-of-type(8){
+    transform: translateY(40%);
+}
+header .title h1 span:nth-of-type(9){
+    transform: translateX(60%);
+}
+
+
+
 
 
 header nav {
