--- a/css/common_sub.css
+++ b/css/common_sub.css
@@ -39,7 +39,7 @@ header .logo {
 header .logo p {
     position: relative;
     width:calc((100%-60rem)/2);
-    font-size: 0.9vw;
+    font-size: 1rem;
     padding: 1.5rem 0;
     padding-left: 0.5rem;
     color: #303030;
@@ -60,10 +60,14 @@ header .logo a img {
 header .h_rt{
     position: relative;
     width:calc((100%-60rem)/2);
-    padding: 1.5rem 0.5rem 1.5rem 0;
+    padding: 1.5rem 0;
+    text-align: right;
+    padding-right: 0.5rem;    
+    color: #303030;
     border-bottom: 1px solid #303030;
     border-top: 1px solid #303030;
-    text-align: right;
+    
+    
 }
 
 header nav{
@@ -74,7 +78,7 @@ header nav a {
     position: relative;
     display: inline;
     padding: 1rem 0.08vw;
-    font-size: 0.9vw;
+    font-size: 1rem;
 }
 
 header nav a:last-child {
@@ -108,6 +112,7 @@ header nav a.active:after {
     border-top: 1px solid #303030;
     transition: .3s;
 }
+
 /* === menu-trigger === */
 
 header .menu-trigger{
