--- a/css/03_venue.css
+++ b/css/03_venue.css
@@ -214,9 +214,7 @@ main .v_02 div:first-child {
 }
 
 main .v_02 div:first-child img {
-    /* display: block;
-    margin: 0 auto; */
-
+    width: 60%;
 
 }
 
