--- a/css/04_stage.css
+++ b/css/04_stage.css
@@ -106,10 +106,14 @@ main .p_02 > div:first-child {
     white-space: pre-line;
     font-size: 2rem;
     line-height: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
+
+
 main .p_02 .schedule {
-    padding-top: 5rem;
+    padding: 5rem 5vw 0 5vw;
     width: 60%;
 }
 
@@ -143,13 +147,19 @@ main .p_02 .schedule p {
 
 }
 /*======================================================*/
-
+/*1024*/
 @media (max-width:1024px){
     main .p_02 {
     width: 100%;
     padding: 4.5rem 0;
 }
-    
 
-}/*769*/
+}
+/*768*/
+@media (max-width:768px){
+    main .p_01 div:first-of-type {
+        font-size: 10vw;
+}
+}
+
 
