--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,5 @@
-html {
-    font-size: 10px;
-}
+html {font-size: 62.5%;}
+
 
 html,body {
     margin: 0;
@@ -17,5 +16,15 @@ h1,h2,h3,h4,h5,h6,p {margin: 0; padding: 0;}
 a {text-decoration: none; color: #303030;}
 
 table{border-collapse: collapse;}
+
+
+@media (max-width:1024px){
+    html {font-size: 55%;}
+}
+
+@media (max-width:768px){
+    html {font-size: 40%;}
+}
+
 
 
