--- a/css/02_show.css
+++ b/css/02_show.css
@@ -168,3 +168,11 @@ main .s_01 ul li a h3 span{
 main .s_01 ul li:hover a h3{
     color: #ededed;
 }
+
+main h2 a:hover{
+    color: none;
+}
+main .s_01 ul li:nth-of-type(1):hover div{
+    opacity:0;
+
+}
