--- a/css/03_venue.css
+++ b/css/03_venue.css
@@ -20,6 +20,12 @@ header nav a {
 header nav a.active:after, header nav a:hover:after {
     border-top: 1px solid #f8bebe;
 }
+main .c_04 {
+    width: 100%;
+    background: #e6e2dd;
+    padding: 0 5vw;
+}
+
 
 
 
@@ -264,9 +270,16 @@ main .process, main >div:last-of-type {
     main .subject {
         width: 95%;
     }
+    main .subject div h2 {
+        font-size: 1.5rem;
+    }
+
 
     header nav a.active:after {
         border:none;
+    }
+    main .c_04 {
+        padding: 0;
     }
     
     main aside {
@@ -333,6 +346,12 @@ main .process, main >div:last-of-type {
         white-space: normal;
         padding-right: 10rem;
     }
+    main .v_02 div:last-child a:hover{
+        background: none;
+    }
+    header nav a.active:after, header nav a:hover:after {
+        border-top: none;
+    }
 
 } /*1024*/
 
@@ -340,6 +359,9 @@ main .process, main >div:last-of-type {
 
 
 @media (max-width:768px){
+    main .subject div h2 {
+        font-size: 1.5rem;
+    }
     
 } /*768*/
 
