--- a/css/common_sub.css
+++ b/css/common_sub.css
@@ -410,7 +410,7 @@ footer p {
         position: fixed;
         z-index: 4;
 
-        right: 0; top: -100vh;
+        left: 0; top: -100vh;
         width: 100vw; height: 100vh;
         background: #303030;
         text-align: center;
@@ -419,7 +419,7 @@ footer p {
     }
     
     header .h_rt nav.active{
-        right: 0; top: 0;
+        left: 0; top: 0;
     }
     
     nav a:hover:after, nav a.active:after {display: none;}
@@ -486,8 +486,14 @@ footer p {
         width: 100%;
     }
     
+/*    remove hover */
+    main .c_03 div article .arrow:hover,main .c_04 .contact div a:hover {
+    background: none;
+}
+
     
-}/*769*/
+    
+}
 
 
 /*============================================*/
