--- a/css/05_contact.css
+++ b/css/05_contact.css
@@ -71,10 +71,12 @@ main .subject h1 span {
         width: 80%;
         margin: 0 auto;
     }
+/*
     .t_01 p a:hover{
     background: none;
     color: none;
     }
+*/
 }
 
 
