--- a/css/common_sub.css
+++ b/css/common_sub.css
@@ -487,9 +487,11 @@ footer p {
     }
     
 /*    remove hover */
+/*
     main .c_03 div article .arrow:hover,main .c_04 .contact div a:hover {
-    background: none;
+    background: #;
 }
+*/
 
     
     
